--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="style/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <title>Ctrl Efetivos</title>
@@ -29,16 +29,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item mx-2">
-                            <a class="nav-link active" aria-current="page" href="paginas/login.html">LOGIN</a>
-                        </li>
-                        <li class="nav-item mx-2">
                             <a class="nav-link" href="paginas/cadastro.html">Cadastro de integrantes</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">Alterar situação</a>
+                            <a class="nav-link" href="paginas/afastamentos.html">Afastamentos</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="paginas/consultas.html">Consultas</a>
                         </li>
                         <li class="nav-item mx-2">
                             <a class="nav-link" href="paginas/contato.html">Contato</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link active" aria-current="page" href="paginas/login.html">LOGIN</a>
                         </li>
                         
 
