--- a/paginas/esqueci.html
+++ b/paginas/esqueci.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esqueci</title>
-    <link rel="stylesheet" href="esqueci.css">
+    <link rel="stylesheet" href="../style/esqueci.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+
 </head>
 
 <body>
@@ -24,7 +27,7 @@
 
                     <div class="entrar">
                         <div id="loginRecup">
-                            <label for="login">LOGIN:</label>
+                            <label for="login">E-MAIL:</label>
                             <input type="text" id="login" required><br>
                             <a href="#"><div class="entrar" id="botao">ENVIAR</div></a>
 
@@ -40,7 +43,8 @@
 
         </footer>
     </div>
-
+    <script src="../js/code.jquery.com_jquery-3.7.1.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 
 </html>
