inserida a pagina informacoes

--- a/paginas/consultas.html
+++ b/paginas/consultas.html
@@ -19,7 +19,7 @@
         <!-- BANNER -->
         <div id="banner">
             <div id="img1"></div>
-            <div id="img2">CONSULTAS</div>
+            <div id="img2">INFORMAÇÕES E DADOS</div>
         </div>
 
         <!-- Barra de Navegação -->
@@ -32,59 +32,68 @@
         <!-- CORPO DA PÁGINA -->
 
         <main>
-            <div id="cardsDiv">
+            <div id="cardsDiv" class="row">
                 <!-- CARD 1 -->
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagens/coter_logo2_resized.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title color-white">COTER</h5>
-                    <p class="card-text">Informações sobre o efetivo geral do COTER, incluindo todas as Chefias e Seções.</p>
-                    <a href="#" class="btn btn-primary">EXIBIR</a>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../imagens/coter_logo2_resized.png" class="card-img-top img-fluid px -2 py-4" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title" style="color: white">COTER</h5>
+                        <p class="card-text">Informações sobre o efetivo geral do COTER, incluindo todas as Chefias e Seções.</p>
+                        <a href="../paginas/informacoes.html" class="btn btn-primary">EXIBIR</a>
+                        </div>
                     </div>
                 </div>
 
                 <!-- CARD 2 -->
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagens/LOGO_CDOUT.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">DOUTRINA</h5>
-                    <p class="card-text">Informações sobre o efetivo do Centro de Doutrina do Exército.</p>
-                    <a href="#" class="btn btn-primary">EXIBIR</a>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../imagens/LOGO_CDOUT.png" class="card-img-top pt-4 pb-5" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title pt-5" style="color: white">DOUTRINA</h5>
+                        <p class="card-text">Informações sobre o efetivo do Centro de Doutrina do Exército.</p>
+                        <a href="../paginas/informacoes.html" class="btn btn-primary">EXIBIR</a>
+                        </div>
                     </div>
                 </div>
 
                 <!-- CARD 3 -->
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagens/LOGO-Prep.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">PREPARO</h5>
-                    <p class="card-text">Informações sobre o efetivo da Chefia do Preparo da Força Terrestre.</p>
-                    <a href="#" class="btn btn-primary">EXIBIR</a>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../imagens/LOGO-Prep.png" class="card-img-top px-3 pt-4 pb-5" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title pt-5" style="color: white">PREPARO</h5>
+                        <p class="card-text">Informações sobre o efetivo da Chefia do Preparo da Força Terrestre.</p>
+                        <a href="../paginas/informacoes.html" class="btn btn-primary">EXIBIR</a>
+                        </div>
                     </div>
                 </div>
 
                 <!-- CARD 4 -->
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagens/LOGO_IGPM.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">Mis Paz, Av, IGPM</h5>
-                    <p class="card-text">Informações sobre o efetivo da Chefia de Missões de Paz, Aviação e IGPM.</p>
-                    <a href="#" class="btn btn-primary">EXIBIR</a>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../imagens/LOGO_IGPM.png" class="card-img-top px-3 pt-5 pb-5" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title pt-5" style="color: white">Mis Paz, Av, IGPM</h5>
+                        <p class="card-text">Informações sobre o efetivo da Chefia de Missões de Paz, Aviação e IGPM.</p>
+                        <a href="../paginas/informacoes.html" class="btn btn-primary">EXIBIR</a>
+                        </div>
                     </div>
                 </div>
 
                 <!-- CARD 5 -->
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagens/BAC.gif" class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">EMPREGO</h5>
-                    <p class="card-text">Informações sobre o efetivo da Chefia do Emprego da Força Terrestre.</p>
-                    <a href="#" class="btn btn-primary">EXIBIR</a>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../imagens/BAC.gif" class="card-img-top px-3 py-4" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title" style="color: white">EMPREGO</h5>
+                        <p class="card-text">Informações sobre o efetivo da Chefia do Emprego da Força Terrestre.</p>
+                        <a href="../paginas/informacoes.html" class="btn btn-primary">EXIBIR</a>
+                        </div>
                     </div>
                 </div>
             </div>
-
-
+                      
 
         </main>
 
