--- a/paginas/login.html
+++ b/paginas/login.html
@@ -19,7 +19,6 @@
         </div>
         <nav>
             <div><a href="../index.html">Inicio</a></div>
-            <div><a href="cad_admin.html">Cadastro</a></div>
             <div><a href="contato.html">Contato</a></div>
 
         </nav>
@@ -40,7 +39,7 @@
                             <input type="password" id="senha" required>
                         </div>
 
-                        <a href="#">
+                        <a href="#" class="entrarLink">
                             <div class="entrar" id="botao">ENTRAR</div>
                         </a>
                 </fieldset>
