--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a class="nav-link" href="paginas/afastamentos.html">Afastamentos</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="paginas/consultas.html">Consultas</a>
+                            <a class="nav-link" href="paginas/consultas.html">Informações e dados</a>
                         </li>
                         <li class="nav-item mx-2">
                             <a class="nav-link" href="paginas/contato.html">Contato</a>
@@ -44,7 +44,6 @@
                             <a class="nav-link active" aria-current="page" href="paginas/login.html">LOGIN</a>
                         </li>
                         
-
                     </ul>
                 </div>
             </div>
@@ -67,7 +66,7 @@
         <!-- CAROSSEL INICIO -->
         <div class="carousel-inner">
 
-            <div class="carousel-item active" style="height: 600px">
+            <div class="carousel-item active" style="height: 85vh">
                 <img src="imagens/Adestr.jpg" alt="" class="d-block w-100">
                 <div class="carousel-caption d-block">
                     <h5>Preparo</h5>
@@ -75,21 +74,21 @@
             </div>
             <!-- CAROSSEL ITEM -->
 
-            <div class="carousel-item" style="height: 600px">
+            <div class="carousel-item" style="height: 85vh">
                 <img src="imagens/Operacao.jpg" alt="" class="d-block w-100">
-                <div class="carousel-caption d-block" style="color: black">
+                <div class="carousel-caption d-block" style="color: white">
                     <h5>Emprego</h5>
                 </div>
             </div>
             <!-- CAROSSEL ITEM -->
-            <div class="carousel-item" style="height: 600px">
+            <div class="carousel-item" style="height: 85vh">
                 <img src="imagens/Dout.jpg" alt="" class="d-block w-100">
                 <div class="carousel-caption d-block">
                     <h5>Doutrina</h5>
                 </div>
             </div>
             <!-- CAROSSEL ITEM -->
-            <div class="carousel-item" style="height: 600px">
+            <div class="carousel-item" style="height: 85vh">
                 <img src="imagens/MntPaz2.jpg" alt="" class="d-block w-100">
                 <div class="carousel-caption d-block">
                     <h5>Mnt Paz, Aviação, IGPM</h5>
@@ -118,11 +117,6 @@
     </footer>
     
    
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
