--- a/paginas/consultas.html
+++ b/paginas/consultas.html
@@ -40,7 +40,7 @@
                         <div class="card-body">
                         <h5 class="card-title" style="color: white">COTER</h5>
                         <p class="card-text">Informações sobre o efetivo geral do COTER, incluindo todas as Chefias e Seções.</p>
-                        <a href="../paginas/informacoes.html" class="btn btn-primary">EXIBIR</a>
+                        <a href="../paginas/informacoes1.html" class="btn btn-primary" id="card1">EXIBIR</a>
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                         <div class="card-body">
                         <h5 class="card-title pt-5" style="color: white">DOUTRINA</h5>
                         <p class="card-text">Informações sobre o efetivo do Centro de Doutrina do Exército.</p>
-                        <a href="../paginas/informacoes.html" class="btn btn-primary">EXIBIR</a>
+                        <a href="../paginas/informacoes2.html" class="btn btn-primary" id="card2">EXIBIR</a>
                         </div>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                         <div class="card-body">
                         <h5 class="card-title pt-5" style="color: white">PREPARO</h5>
                         <p class="card-text">Informações sobre o efetivo da Chefia do Preparo da Força Terrestre.</p>
-                        <a href="../paginas/informacoes.html" class="btn btn-primary">EXIBIR</a>
+                        <a href="../paginas/informacoes3.html" class="btn btn-primary" id="card3">EXIBIR</a>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                         <div class="card-body">
                         <h5 class="card-title pt-5" style="color: white">Mis Paz, Av, IGPM</h5>
                         <p class="card-text">Informações sobre o efetivo da Chefia de Missões de Paz, Aviação e IGPM.</p>
-                        <a href="../paginas/informacoes.html" class="btn btn-primary">EXIBIR</a>
+                        <a href="../paginas/informacoes4.html" class="btn btn-primary" id="card4">EXIBIR</a>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                         <div class="card-body">
                         <h5 class="card-title" style="color: white">EMPREGO</h5>
                         <p class="card-text">Informações sobre o efetivo da Chefia do Emprego da Força Terrestre.</p>
-                        <a href="../paginas/informacoes.html" class="btn btn-primary">EXIBIR</a>
+                        <a href="../paginas/informacoe5.html" class="btn btn-primary" id="card5">EXIBIR</a>
                         </div>
                     </div>
                 </div>
@@ -96,6 +96,7 @@
                       
 
         </main>
+
 
 
 
