--- a/paginas/consultas.html
+++ b/paginas/consultas.html
@@ -100,12 +100,11 @@
 
 
 
-<!--         
-            <div id="resetPos">
+<!--<div id="resetPos">
                 <button type="submit" id="submit">enviar</button><br>
                 <button type="reset" id="reset">reset</button>
             </div>
-    </div> -->
+</div>-->
 
 
     <div id="voltarPos">
@@ -115,6 +114,7 @@
     </div>
 
     <script src="../js/code.jquery.com_jquery-3.7.1.js"></script>
+    <script src="../js/consulta2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     
 </body>
