--- a/paginas/informacoes3.html
+++ b/paginas/informacoes3.html
@@ -18,7 +18,7 @@
         <!-- BANNER -->
         <div id="banner">
             <div id="img1"></div>
-            <div id="img2">Centro de Doutrina</div>
+            <div id="img2"><span id="pagTitulo">Centro de Doutrina</span></div>
         </div>
 
         <!-- Barra de Navegação -->
@@ -62,7 +62,7 @@
     </div>
 
     <script src="../js/code.jquery.com_jquery-3.7.1.js"></script>
-    <script src="../js/informacoes.js"></script>
+    <script src="../js/consulta2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
