--- a/paginas/consultas.html
+++ b/paginas/consultas.html
@@ -88,7 +88,7 @@
                         <div class="card-body">
                         <h5 class="card-title" style="color: white">EMPREGO</h5>
                         <p class="card-text">Informações sobre o efetivo da Chefia do Emprego da Força Terrestre.</p>
-                        <a href="../paginas/informacoe5.html" class="btn btn-primary" id="card5">EXIBIR</a>
+                        <a href="../paginas/informacoes5.html" class="btn btn-primary" id="card5">EXIBIR</a>
                         </div>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
     </div>
 
     <script src="../js/code.jquery.com_jquery-3.7.1.js"></script>
-    <script src="../js/consulta2.js"></script>
+    <script src="../js/consultas.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     
 </body>
