--- a/paginas/informacoes2.html
+++ b/paginas/informacoes2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informações</title>
 
-<link rel="stylesheet" href="../style/informacoes3.css">
+<link rel="stylesheet" href="../style/informacoes2.css">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
@@ -18,7 +18,7 @@
         <!-- BANNER -->
         <div id="banner">
             <div id="img1"></div>
-            <div id="img2"><span id="pagTitulo">Ch Preparo</span></div>
+            <div id="img2">Centro de Doutrina</div>
         </div>
 
         <!-- Barra de Navegação -->
@@ -62,7 +62,7 @@
     </div>
 
     <script src="../js/code.jquery.com_jquery-3.7.1.js"></script>
-    <script src="../js/informacoes3.js"></script>
+    <script src="../js/informacoes2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
