alteracoes finais 03SET

--- a/paginas/consultas.html
+++ b/paginas/consultas.html
@@ -34,8 +34,8 @@
         <main>
             <div id="cardsDiv" class="row">
                 <!-- CARD 1 -->
-                <div class="col-6 col-md-4 col-lg-2">
-                    <div class="card" style="width: 18rem;">
+                <div class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card" style="width: 14rem;">
                         <img src="../imagens/coter_logo2_resized.png" class="card-img-top img-fluid px -2 py-4" alt="...">
                         <div class="card-body">
                         <h5 class="card-title" style="color: white">COTER</h5>
@@ -46,20 +46,20 @@
                 </div>
 
                 <!-- CARD 2 -->
-                <div class="col-6 col-md-4 col-lg-2">
-                    <div class="card" style="width: 18rem;">
+                <div class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card" style="width: 14rem;">
                         <img src="../imagens/LOGO_CDOUT.png" class="card-img-top pt-4 pb-5" alt="...">
                         <div class="card-body">
                         <h5 class="card-title pt-5" style="color: white">DOUTRINA</h5>
-                        <p class="card-text">Informações sobre o efetivo do Centro de Doutrina do Exército.</p>
+                        <p class="card-text pb-3">Informações sobre o efetivo do Centro de Doutrina do Exército.</p>
                         <a href="../paginas/informacoes2.html" class="btn btn-primary" id="card2">EXIBIR</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- CARD 3 -->
-                <div class="col-6 col-md-4 col-lg-2">
-                    <div class="card" style="width: 18rem;">
+                <div class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card" style="width: 14rem;">
                         <img src="../imagens/LOGO-Prep.png" class="card-img-top px-3 pt-4 pb-5" alt="...">
                         <div class="card-body">
                         <h5 class="card-title pt-5" style="color: white">PREPARO</h5>
@@ -70,8 +70,8 @@
                 </div>
 
                 <!-- CARD 4 -->
-                <div class="col-6 col-md-4 col-lg-2">
-                    <div class="card" style="width: 18rem;">
+                <div class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card" style="width: 14rem;">
                         <img src="../imagens/LOGO_IGPM.png" class="card-img-top px-3 pt-5 pb-5" alt="...">
                         <div class="card-body">
                         <h5 class="card-title pt-5" style="color: white">Mis Paz, Av, IGPM</h5>
@@ -82,11 +82,11 @@
                 </div>
 
                 <!-- CARD 5 -->
-                <div class="col-6 col-md-4 col-lg-2">
-                    <div class="card" style="width: 18rem;">
+                <div class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card" style="width: 14rem;">
                         <img src="../imagens/BAC.gif" class="card-img-top px-3 py-4" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title" style="color: white">EMPREGO</h5>
+                        <h5 class="card-title pt-4" style="color: white">EMPREGO</h5>
                         <p class="card-text">Informações sobre o efetivo da Chefia do Emprego da Força Terrestre.</p>
                         <a href="../paginas/informacoes5.html" class="btn btn-primary" id="card5">EXIBIR</a>
                         </div>
