--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -18,13 +18,12 @@
         </div>
         <div id="recuperacaoTit">CONTATO COM ADMINISTRADOR DO SISTEMA</div>
         <main>
-           <div>
+           <div id="divTabela">
            <table>
-            <tr><th>CONTATOS</th></tr>
             <tr>
-                <td>NOME</td>
-                <td>SEÇÃO</td>
-                <td>RAMAL</td>
+                <th>NOME</th>
+                <th>SEÇÃO</th>
+                <th>RAMAL</th>
             </tr>
             <tr>
                 <td>Cel ALVES SANTANA</td>
