--- a/paginas/informacoes5.html
+++ b/paginas/informacoes5.html
@@ -34,11 +34,11 @@
                     <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     SELECIONE
                     </button>
-                    <ul class="dropdown-menu">
-                    <li id="menu1"><a class="dropdown-item" style="color: black" href="#">Efetivo - Ativa</a></li>
-                    <li id="menu2"><a class="dropdown-item" style="color: black" href="#">Efetivo - PTTC</a></li>
-                    <li id="menu3"><a class="dropdown-item" style="color: black" href="#">Força de Trabalho</a></li>
-                    <li id="menu4"><a class="dropdown-item" style="color: black" href="#">Mapa da Força</a></li>
+                    <ul class="dropdown-menu dropdown-menu-dark">
+                    <li id="menu1"><a class="dropdown-item" style="color: white" href="#">Efetivo - Ativa</a></li>
+                    <li id="menu2"><a class="dropdown-item" style="color: white" href="#">Efetivo - PTTC</a></li>
+                    <li id="menu3"><a class="dropdown-item" style="color: white" href="#">Força de Trabalho</a></li>
+                    <li id="menu4"><a class="dropdown-item" style="color: white" href="#">Mapa da Força</a></li>
                     </ul>
                 </div>
             </div>
@@ -62,7 +62,7 @@
     </div>
 
     <script src="../js/code.jquery.com_jquery-3.7.1.js"></script>
-    <script src="../js/informacoes5.js"></script>
+    <script src="../js/informacoes.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
